Restructure render project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,8 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
 set(INSTALL_CONFIG_DIR "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/cmake")
 
-add_subdirectory(src)
+add_subdirectory(world)
+add_subdirectory(render)
+add_subdirectory(gui)
+
 include_directories(include)
