--- a/world/CMakeLists.txt
+++ b/world/CMakeLists.txt
@@ -1,14 +1,21 @@
 project(World VERSION 0.0.1 DESCRIPTION "World library")
 
 #add_subdirectory(${PROJECT_INCLUDE_DIR})
+set(CMAKE_CXX_STANDARD 14)
 
 find_package(glm REQUIRED)
 
 set(SOURCE_FILES
     include/world.hpp
-    include/entity.h src/entity.cpp
+    include/typeid.hpp
+    include/component.hpp
+    include/typedcomponent.hpp
+    include/componentlist.hpp
+    include/entity.hpp
+    include/typedentity.hpp
     include/movingentity.h src/movingentity.cpp
     include/axis.h src/axis.cpp
+    include/transformcomponent.h src/transformcomponent.cpp
 )
 
 add_library(world SHARED ${SOURCE_FILES})
